--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Serie de Fibonacci</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Serie de Fibonacci</h1>
+    <div id="result"></div>
+    <button onclick="displayFibonacciSeries()">Solicitar otro número</button>
+    <script src="java.js"></script>
 </body>
 </html>
